docs/0.18.2/_sources/api/gammapy.estimators.TSMapEstimator.rst.txt
TSMapEstimator
==============

.. currentmodule:: gammapy.estimators

.. autoclass:: TSMapEstimator
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~TSMapEstimator.config_parameters
      ~TSMapEstimator.selection_all
      ~TSMapEstimator.selection_optional
      ~TSMapEstimator.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~TSMapEstimator.copy
      ~TSMapEstimator.estimate_flux_default
      ~TSMapEstimator.estimate_flux_map
      ~TSMapEstimator.estimate_kernel
      ~TSMapEstimator.estimate_mask_default
      ~TSMapEstimator.estimate_sqrt_ts
      ~TSMapEstimator.get_sqrt_ts
      ~TSMapEstimator.run

   .. rubric:: Attributes Documentation

   .. autoattribute:: config_parameters
   .. autoattribute:: selection_all
   .. autoattribute:: selection_optional
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: estimate_flux_default
   .. automethod:: estimate_flux_map
   .. automethod:: estimate_kernel
   .. automethod:: estimate_mask_default
   .. automethod:: estimate_sqrt_ts
   .. automethod:: get_sqrt_ts
   .. automethod:: run
