docs/1.3/_sources/api/gammapy.estimators.TSMapEstimator.rst.txt
TSMapEstimator
==============

.. currentmodule:: gammapy.estimators

.. autoclass:: TSMapEstimator
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~TSMapEstimator.config_parameters
      ~TSMapEstimator.n_jobs
      ~TSMapEstimator.parallel_backend
      ~TSMapEstimator.selection_all
      ~TSMapEstimator.selection_optional
      ~TSMapEstimator.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~TSMapEstimator.copy
      ~TSMapEstimator.estimate_fit_input_maps
      ~TSMapEstimator.estimate_flux_default
      ~TSMapEstimator.estimate_flux_map
      ~TSMapEstimator.estimate_kernel
      ~TSMapEstimator.estimate_mask_default
      ~TSMapEstimator.estimate_pad_width
      ~TSMapEstimator.run

   .. rubric:: Attributes Documentation

   .. autoattribute:: config_parameters
   .. autoattribute:: n_jobs
   .. autoattribute:: parallel_backend
   .. autoattribute:: selection_all
   .. autoattribute:: selection_optional
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: estimate_fit_input_maps
   .. automethod:: estimate_flux_default
   .. automethod:: estimate_flux_map
   .. automethod:: estimate_kernel
   .. automethod:: estimate_mask_default
   .. automethod:: estimate_pad_width
   .. automethod:: run
